SSHOC-25 integration tests Add integration tests for training material drafts Fix issues